@@ -1,3 +1,7 @@
+2003-07-08  Kris Warkentin  <kewarken@qnx.com>
+
+	* nto-procfs.c: Cleaned up a bunch of ARI hits.
+
 2003-07-07  Andrew Cagney  <cagney@redhat.com>
 
 	* frame.c (get_prev_frame): Enable check for identical frames.
